Spacing fix

--- a/harmony-hub/hub.css
+++ b/harmony-hub/hub.css
@@ -49,7 +49,7 @@ nav {
 }
 
 .menu-button img {
-    width: fit-content; 
+    width: 50px; 
     height: auto;
 }
 
@@ -92,7 +92,7 @@ main {
 }
 
 .search-row input{
-    width: 90%;
+    width: 80%;
     height: 50px;
     border-radius: 5px;
     font-size: 30px;
